@@ -35,6 +35,9 @@ Version history:
 - attribute generation is now determined exclusively by each object class setup (not library is before)
 - more robust pack setting for Max/MSP @ Windows
 - should work with Mac/Intel (still untested!)
+- added new FLEXT_HEADER macros to enable class templates
+- more ToOut/Sys* methods
+- fixed help name definition at class setup
 
 0.5.0:
 - fixes for 64 bit builds (size_t is integer type of pointer size)
